--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lakki+Reddy&display=swap');
 
 body{
-    background-color: #DCDCDC;
-    /* background-color: #AD00FF; */
-    background: #323232;
-
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh; 
+    text-align: center;
 }
 
 .startPage{
     width: 55vw; 
     height: 80vh;
-
-    /* background-color: #ff00b399; */
-    background-color: #ffffff;
-    background-color: black;
-
     border-radius: 18px;
     flex-direction: column;
-
     box-shadow: 0px 0px 10px 5px #00000080;
 }
 
@@ -36,5 +27,6 @@ button{
 }
 
 button:active{
+    box-shadow: none;
     transform: scale(0.95);
 }
