--- a/src/components/QuestionBox.css
+++ b/src/components/QuestionBox.css
@@ -18,34 +18,20 @@
     width: 100px;
     height: 38px;
     border-radius: 20px;
-
-    background: #DCDCDC;
-    background: #323232;
-    
-    box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.40);
-    /* box-shadow: 0px 5px 0px 0px rgba(220, 220, 220, 0.45); */
-    color: white;
     border: none;
 }
 
 .option{
-    width: 501px;
+    width: 33vw;
     height: 50px;
     border-radius: 7px;
-
-    background: #323232;
-    /* background-color: #DCDCDC; */
-
-    color: white;
-    /* color: black; */
-    /* font-weight: 900; */
-
+    font-weight: 900;
     border: none;
     margin-top: 10px;
 }
 
 .option:hover{
-    background-color: #AD00FF;
+    box-shadow: inset 0 0 0 100px #AD00FF;
 }
 
 .highlight-options{
@@ -58,23 +44,16 @@
     height: 40px;
     border-radius: 31px;
     background: #AD00FF;
-    color: white;
     font-size: 15px;
     border: none;
 }
 
 h2{
-    color: white;
-    /* color: black; */
-
     font-size: 20px;
     margin-bottom: 15px;
 }
 
 h1{
-    color: white;
-    /* color: black; */
-
     margin-bottom: 30px;
     font-size: 27px;
     text-wrap: wrap;
