--- a/src/components/StartPage.css
+++ b/src/components/StartPage.css
@@ -10,23 +10,13 @@
 .start-btn{
     border-radius: 20px;
     background: #AD00FF;
-
-    box-shadow: 0px 5px 0px 0px #680098;
-    /* box-shadow: 0px 5px 0px 0px #520078; */
+    box-shadow: 5px 5px 0px 0px #af02ff7a;
 }
 
 .toggle-btn{
     margin-top: 30px;
     border-radius: 20px;
-
-    background: #DCDCDC;
-    background: #323232;
-    
-    box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.40);
-    /* box-shadow: 0px 5px 0px 0px rgba(220, 220, 220, 0.45); */
-
 }
-
 
 .btn{
     width: 246px;
@@ -35,7 +25,6 @@
     font-size: 30px;
     border: none;
     cursor: pointer;
-    /* transition: all 2s ease-in-out; */
 }
 
 .btn:active{
