--- a/src/components/QuestionBox.css
+++ b/src/components/QuestionBox.css
@@ -28,6 +28,8 @@
     font-weight: 900;
     border: none;
     margin-top: 10px;
+    font-size: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .option:hover{
